@@ -118,6 +118,9 @@ JH/34 Bug 1648: Fix a memory leak seen with "mailq" and large queues.
 JH/35 Bug 1642: Fix support of $spam_ variables at delivery time.  Was
       documented as working, but never had.  Support all but $spam_report.
 
+JH/36 Bug 1659: Guard checking of input smtp commands again pseudo-command
+      added for tls authenticator.
+
 
 Exim version 4.85
 -----------------
